backend/ticket-flow-dump-2.txt
C:\Users\feliperosa\whaticket\backend\node_modules\ts-node\src\index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: тип Unable to compile TypeScript:
src/scripts/investigate-ticket-flow.ts(19,69): error TS2339: Property 'value' does not exist on type 'object'.

    at createTSError (C:\Users\feliperosa\whaticket\backend\node_modules\ts-node\src\index.ts:859:12)
    at reportTSError (C:\Users\feliperosa\whaticket\backend\node_modules\ts-node\src\index.ts:863:19)
    at getOutput (C:\Users\feliperosa\whaticket\backend\node_modules\ts-node\src\index.ts:1077:36)
    at Object.compile (C:\Users\feliperosa\whaticket\backend\node_modules\ts-node\src\index.ts:1433:41)
    at Module.m._compile (C:\Users\feliperosa\whaticket\backend\node_modules\ts-node\src\index.ts:1617:30)
    at node:internal/modules/cjs/loader:1820:10
    at Object.require.extensions.<computed> [as .ts] (C:\Users\feliperosa\whaticket\backend\node_modules\ts-node\src\index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1423:32)
    at Function._load (node:internal/modules/cjs/loader:1246:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14) {
  diagnosticCodes: [ 2339 ]
}
